lagt til sjekking mot lonnstilskudd